@@ -33,7 +33,6 @@
 #define NPLOT 1000
 
 #include "potfit.h"
-#include "functions.h"
 #include "utils.h"
 
 /****************************************************************
@@ -413,6 +412,10 @@ void read_pot_table0(pot_table_t *pt, apot_table_t *apt, char *filename,
   char *token;
   real *val, *list, temp;
   fpos_t filepos, startpos;
+
+  /* initialize the function table for analytic potentials */
+  if (apot_init() != 0)
+    error("Could not initialize the analytic potential table!");
 
   /* save starting position */
   fgetpos(infile, &startpos);
